# career-agent

./: .gitignore  .hfignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: logging_config.py  settings.py
core/: formatter.py  models.py  router.py  schemas.py  types.py  validator.py
evaluation/: evaluate_retrieval.py  retrieval_eval.json
pipeline/: career_pipeline.py  instructions.py  memory.py
prompts/: fallback_prompt.txt  summarization_prompt.txt  system_prompt.txt  validation_prompt.txt
rag/: chunker.py  embeddings.py  faiss_store.py  keyword_search.py  pdf_loader.py  query_normalizer.py  reranker.py  retriever.py  storage.py  vector_store.py
scripts/: build_index.py  evaluate.py
tests/: recruiter_questions.py  test_chunking.py  test_deduplication.py  test_hybrid_retrieval.py  test_query_normalizer.py  test_regressions.py  test_retrieval.py
