[project]

name = "career-agent"

version = "0.1.0"

description = "Production-grade AI career conversation agent"

readme = "README.md"

requires-python = ">=3.11"

dependencies = [
    "black[jupyter]>=26.3.1",
    "faiss-cpu>=1.13.2",
    "google-genai>=2.0.1",
    "google-generativeai>=0.8.6",
    "gradio>=6.14.0",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "openai-agents>=0.17.2",
    "pydantic>=2.11.10,<=2.12.5",
    "pydantic-settings>=2.9.0,<2.14.0",
    "pypdf>=6.11.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "tenacity>=9.1.4",
]

[tool.pytest.ini_options]

pythonpath = ["."]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
